--- a/pr2/biography.html
+++ b/pr2/biography.html
@@ -7,22 +7,33 @@
 	<body>
 		<h1>Автобіографія Винничука Максима Петровича</h1>
 		<p><a href="index.html" target="_blank">Назад на головну</a></p>
-		<h3>Зміст</h3>
-		<h3><b>Базова інформація</b></h3>
+		<h3 id = "Content">Зміст:</h3>
+		<p><a href = "#Basic information">Базова інформація</a></p>
+		<p><a href = "#Childhood">Дитинство</a></p>
+		<p><a href = "#School years">Шкільні роки</a></p>
+		<p><a href = "#Out of school">Поза школою</a></p>
+		<p><a href = "#Univercity">Університет</a></p>
+			<article>
+		<h3 id = "Basic information"><b>Базова інформація</b></h3>
 			<p>Народився 29.09.2004. в с. Тюдів Косівського р-ну Івано-Франківської обл.</p>
-			<p><em>до змісту</em></p>
-		<h3>Дитинство</h3>
+			</article>
+			<a href = "#Content">До змісту</a>
+		<h3 id = "Childhood">Дитинство</h3>
 			<p>В дитинстві любив грати в футбол і співати</p>
-			<p><em>до змісту</em></p>
-		<h3>Шкільні роки</h3>
+			<article>
+			<a href = "#Content">До змісту</a>
+		<h3 id = "School years">Шкільні роки</h3>
 			<p>Навчався в Тюдівскому ліцеї. Улюбленими предметами були математика та інформатика<p>
-			<p><em>до змісту</em></p>
-		<h3>Поза школою</h3>
+			</article>
+			<a href = "#Content">До змісту</a>
+		<h3 id = "Out of school">Поза школою</h3>
 			<p>Ходив в музичну школу по класу аккордеон</p>
-			<p><em>до змісту</em></p>
-		<h3>Університет</h3>
+			<article>
+			<a href = "#Content">До змісту</a>
+		<h3 id = "Univercity">Університет</h3>
 			<p>Поступив в прикарпатський національний університет імені Василя Стефаника на спеціальність 122 "Комп'ютерні науки"</p>
-			<p><em>до змісту</em></p>
-			<p><a href="biography.html">Уверх</a>
+			</article>
+			<a href = "#Content">До змісту</a>
+			<p><a href="#">Уверх</a></p>
 	</body>
 </html> 
