--- a/pr2/gallery.html
+++ b/pr2/gallery.html
@@ -9,8 +9,11 @@
 		<p><a href="index.html" target="_blank">Назад на головну</a>
 		<h2>Мої зображення</h2>
 		<h3>Зображення у цій папці</h3>
-		<h3>Зображення у папці</h3>
-		<h3>Зображення онлайн</h3>
 		<img src="green.jpg" alt="">
+		<h3>Зображення у папці</h3>
+		<image src = "images/Blue.JPG">
+		<h3>Зображення онлайн</h3>
+		<image src = "https://place-hold.it/1280x1024">
+		
 	</body>
 </html>
