--- a/pr2/biography.html
+++ b/pr2/biography.html
@@ -6,7 +6,7 @@
 	</head>	
 	<body>
 		<h1>Автобіографія Винничука Максима Петровича</h1>
-		<p><a href="index.html" target="_blank">Назад на головну</a></p>
+		<p><a href = "index.html">Назад на головну</a></p>
 		<h3 id = "Content">Зміст:</h3>
 		<p><a href = "#Basic information">Базова інформація</a></p>
 		<p><a href = "#Childhood">Дитинство</a></p>
