--- a/pr2/friends.html
+++ b/pr2/friends.html
@@ -6,7 +6,7 @@
 	</head>	
 	<body>
 		<h1>Друзі Винничука Максима Петровича</h1>
-		<p><a href="index.html" target="_blank">Назад на головну</a>
+		<p><a href = "index.html">Назад на головну</a></p>
 		<h2>Мої друзі</h2>
 		<table>
 			<thead>
