--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 		<h1>Персональна сторінка Винничука Максима Петровича</h1>
 		<h3>Я студент 1 курсу Прикарпатського національного університету імені Василя Стефаника.Навчаюся на факультеті математики та інформатики, спеціальність "Комп'ютерні науки". Цікавлюсь пррограмуванням та комп'ютерними іграми.</h3>
 	<p>
-		<p><a href="biography.html" target="_blank">Автобіографія</a>
-		<p><a href="novadays.html" target="_blank">Сьогодення</a>
-		<p><a href="friends.html" target="_blank">Друзі</a>
-		<p><a href="gallery.html" target="_blank">Галерея</a>
+		<p><a href="biography.html">Автобіографія</a>
+		<p><a href="novadays.html">Сьогодення</a>
+		<p><a href="friends.html">Друзі</a>
+		<p><a href="gallery.html">Галерея</a>
 	</p>
 	</body>
 </html>
