--- a/pr2/novadays.html
+++ b/pr2/novadays.html
@@ -6,7 +6,7 @@
 	</head>	
 	<body>
 		<h1>Сьогодення Винничука Максима Петровича</h1>
-		<p><a href="index.html" target="_blank">Назад на головну</a>
+		<p><a href="index.html">Назад на головну</a>
 		<h2>Мій типовий список покупок</h2>
 
 		<h3>Молочні продукти:</h3>
