--- a/pr2/gallery.html
+++ b/pr2/gallery.html
@@ -6,7 +6,7 @@
 	</head>	
 	<body>
 		<h1>Галерея Винничука Максима Петровича</h1>
-		<p><a href="index.html" target="_blank">Назад на головну</a>
+		<p><a href="index.html">Назад на головну</a>
 		<h2>Мої зображення</h2>
 		<h3>Зображення у цій папці</h3>
 		<img src="green.jpg" alt="">
