--- a/pr2/biography.html
+++ b/pr2/biography.html
@@ -18,18 +18,22 @@
 			<p>Народився 29.09.2004. в с. Тюдів Косівського р-ну Івано-Франківської обл.</p>
 			</article>
 			<a href = "#Content">До змісту</a>
+			<article>
 		<h3 id = "Childhood">Дитинство</h3>
 			<p>В дитинстві любив грати в футбол і співати</p>
-			<article>
+			</article>
 			<a href = "#Content">До змісту</a>
+			<article>
 		<h3 id = "School years">Шкільні роки</h3>
 			<p>Навчався в Тюдівскому ліцеї. Улюбленими предметами були математика та інформатика<p>
 			</article>
 			<a href = "#Content">До змісту</a>
+			<article>
 		<h3 id = "Out of school">Поза школою</h3>
 			<p>Ходив в музичну школу по класу аккордеон</p>
-			<article>
+			</article>
 			<a href = "#Content">До змісту</a>
+			<article>
 		<h3 id = "Univercity">Університет</h3>
 			<p>Поступив в прикарпатський національний університет імені Василя Стефаника на спеціальність 122 "Комп'ютерні науки"</p>
 			</article>
