--- a/pr2/biography.html
+++ b/pr2/biography.html
@@ -17,7 +17,7 @@
 		<h4 id = "Basic information"><b>Базова інформація</b></h4>
 			<p>Народився 29.09.2004. в с. Тюдів Косівського р-ну Івано-Франківської обл.</p>
 			</article>
-			<a href = "#Content">До змісту</a>
+			<a name = "#Content">До змісту</a>
 			<article>
 		<h4 id = "Childhood">Дитинство</h4>
 			<p>В дитинстві любив грати в футбол і співати</p>
