--- a/pr2/novadays.html
+++ b/pr2/novadays.html
@@ -8,26 +8,26 @@
 		<h1>Сьогодення Винничука Максима Петровича</h1>
 		<p><a href="index.html">Назад на головну</a>
 		<h2>Мій типовий список покупок</h2>
-
-		<h3>Молочні продукти:</h3>
+		<ul>
+		<li>Молочні продукти:
 		<ul>
 		<li>Молоко</li>	
 		<li>Сметана</li>	
 		<li>Масло</li>	
-		</ul>
-		<h3>М'ясні продукти</h3>
+		</ul></li>
+		<li>М'ясні продукти:
 		<ul>
 		<li>Ковбаса</li>
 		<li>Сосиски</li>	
-		</ul>
-		<h3>Овочі</h3>
+		</ul></li>
+		<li>Овочі
 		<ul>
 		<li>Картопля</li>
 		<li>Морква</li>
 		<li>Цибуля</li>
 		<li>Огірки</li>
 		<li>Помідори</li>
-		</ul>
+		</ul></li>
 		<h2>Мій улюблений десерт</h2>
 		<h3>Сирники під ніжним соусом</h3>
 		<h4>Приготування сирників</h4>
