--- a/pr2/novadays.html
+++ b/pr2/novadays.html
@@ -30,7 +30,8 @@
 		</ul></li>
 		<h2>Мій улюблений десерт</h2>
 		<h3>Сирники під ніжним соусом</h3>
-		<h4>Приготування сирників</h4>
+		<ul>
+		<li>Приготування сирників
 		<ol>
 		<li>Взяти 500гр сиру</li>
 		<li>Додати 50 гр цукру і сіль за смаком</li>
@@ -40,15 +41,15 @@
 		<li>Все добре перемішати</li>
 		<li>Сформувати сирники, обваляти їх у борошні</li>
 		<li>Обсмажити сирники на олії з обох боків до золотистої скоринки</li>
-		</ol>
-		<h4>Приготування заливки</h4>
+		</ol></li>
+		<li>Приготування заливки
 		<ol>
 		<li>Взяти 50 гр вершкового масла</li>
 		<li>Додати 100гр сметани</li>
 		<li>Додати 50 гр меду</li>
 		<li>Проварити масу до однорідності</li>
 		<li>Полити сирники ще теплою заливкою</li>
-		</ol>
+		</ol></li>
 		<p><a href="biography.html">Уверх</a>
 
 	</body>
