--- a/friends.html
+++ b/friends.html
@@ -9,6 +9,7 @@
 		<p><a href="index.html" target="_blank">Назад на головну</a>
 		<h1>Мої друзі</h1>
 		<table>
+			<caption>Друзі</caption>
 			<thead>
 				<tr>
 					<th>Прізвище</th>
