--- a/pr2/friends.html
+++ b/pr2/friends.html
@@ -9,6 +9,7 @@
 		<p><a href = "index.html">Назад на головну</a></p>
 		<h2>Мої друзі</h2>
 		<table>
+			<caption>Дані друзів</caption>
 			<thead>
 				<tr>
 					<th>Прізвище</th>
