--- a/pr2/biography.html
+++ b/pr2/biography.html
@@ -17,28 +17,28 @@
 		<h4 id = "Basic information"><b>Базова інформація</b></h4>
 			<p>Народився 29.09.2004. в с. Тюдів Косівського р-ну Івано-Франківської обл.</p>
 			</article>
-			<a name = "#Content">До змісту</a>
+			<a href = "#Content">До змісту</a>
 			<article>
 		<h4 id = "Childhood">Дитинство</h4>
 			<p>В дитинстві любив грати в футбол і співати</p>
 			</article>
-			<a name = "#Content">До змісту</a>
+			<a href = "#Content">До змісту</a>
 			<article>
 		<h4 id = "School years">Шкільні роки</h4>
 			<p>Навчався в Тюдівскому ліцеї. Улюбленими предметами були математика та інформатика<p>
 			</article>
-			<a name = "#Content">До змісту</a>
+			<a href = "#Content">До змісту</a>
 			<article>
 		<h4 id = "Out of school">Поза школою</h4>
 			<p>Ходив в музичну школу по класу аккордеон</p>
 			</article>
-			<a name = "#Content">До змісту</a>
+			<a href = "#Content">До змісту</a>
 			<article>
 		<h4 id = "Univercity">Університет</h4>
 			<p>Поступив в прикарпатський національний університет імені Василя Стефаника на спеціальність 122 "Комп'ютерні науки"</p>
 			</article>
-			<a name = "#Content">До змісту</a>
+			<a href = "#Content">До змісту</a>
 			<hr>			
-			<p><a name="#">Уверх</a></p>
+			<p><a href="#">Уверх</a></p>
 	</body>
 </html> 
