--- a/pr2/biography.html
+++ b/pr2/biography.html
@@ -7,35 +7,35 @@
 	<body>
 		<h1>Автобіографія Винничука Максима Петровича</h1>
 		<p><a href = "index.html">Назад на головну</a></p>
-		<h3 id = "Content">Зміст:</h3>
+		<a id = "Content"><h3>Зміст:</h3></a>
 		<p><a href = "#Basic information">Базова інформація</a></p>
 		<p><a href = "#Childhood">Дитинство</a></p>
 		<p><a href = "#School years">Шкільні роки</a></p>
 		<p><a href = "#Out of school">Поза школою</a></p>
 		<p><a href = "#Univercity">Університет</a></p>
 			<article>
-		<h4 id = "Basic information"><b>Базова інформація</b></h4>
+		<h2 id = "Basic information"><b>Базова інформація</b></h2>
 			<p>Народився 29.09.2004. в с. Тюдів Косівського р-ну Івано-Франківської обл.</p>
 			</article>
 			<a href = "#Content">До змісту</a>
 			<article>
-		<h4 id = "Childhood">Дитинство</h4>
-			<p>В дитинстві любив грати в футбол і співати</p>
+		<h2 id = "Childhood">Дитинство</h2>
+			<p>Дитинство було веселе і повне фантазій. Малим я вірив у магію, лісових духів та інших казкових істот, вважав , що раз про них гворять, значить вони існують насправді. Своє дитинство провів в селі Тюдів, ходив там в дитячий садок. Багато часу приділяв своєму молодшому братові, з яким любив грати в футбол</p>
 			</article>
 			<a href = "#Content">До змісту</a>
 			<article>
-		<h4 id = "School years">Шкільні роки</h4>
-			<p>Навчався в Тюдівскому ліцеї. Улюбленими предметами були математика та інформатика<p>
+		<h2 id = "School years">Шкільні роки</h2>
+			<p>У школі я проводив третину свого дня, вивчаючи і відкриваючи для себе щоь нове.Навчався в Тюдівскому ліцеї. Улюбленими предметами були математика та інформатика<p>
 			</article>
 			<a href = "#Content">До змісту</a>
 			<article>
-		<h4 id = "Out of school">Поза школою</h4>
-			<p>Ходив в музичну школу по класу аккордеон</p>
+		<h2 id = "Out of school">Поза школою</h2>
+			<p>Ходив в музичну школу по класу аккордеон. Після уроків відвідував футбольну секцію</p>
 			</article>
 			<a href = "#Content">До змісту</a>
 			<article>
-		<h4 id = "Univercity">Університет</h4>
-			<p>Поступив в прикарпатський національний університет імені Василя Стефаника на спеціальність 122 "Комп'ютерні науки"</p>
+		<h2 id = "Univercity">Університет</h2>
+			<p>Після закінчення школи серйозно замислився про те, ким я хочу працювати та про вибір навчального закладу. Вирішив поступити в прикарпатський національний університет імені Василя Стефаника на спеціальність 122 "Комп'ютерні науки"</p>
 			</article>
 			<a href = "#Content">До змісту</a>
 			<hr>			
