--- a/pr2/biography.html
+++ b/pr2/biography.html
@@ -20,22 +20,22 @@
 			<a href = "#Content">До змісту</a>
 			<article>
 		<h2 id = "Childhood">Дитинство</h2>
-			<p>Дитинство було веселе і повне фантазій. Малим я вірив у магію, лісових духів та інших казкових істот, вважав , що раз про них гворять, значить вони існують насправді. Своє дитинство провів в селі Тюдів, ходив там в дитячий садок. Багато часу приділяв своєму молодшому братові, з яким любив грати в футбол</p>
+			<p>Дитинство було веселе і повне фантазій. Малим я вірив у магію, лісових духів та інших казкових істот, вважав , що раз про них гворять, значить вони існують насправді. Своє дитинство провів в селі Тюдів, ходив там в дитячий садок. Багато часу приділяв своєму молодшому братові, з яким любив грати в футбол.</p>
 			</article>
 			<a href = "#Content">До змісту</a>
 			<article>
 		<h2 id = "School years">Шкільні роки</h2>
-			<p>У школі я проводив третину свого дня, вивчаючи і відкриваючи для себе щоь нове.Навчався в Тюдівскому ліцеї. Улюбленими предметами були математика та інформатика<p>
+			<p>У школі я проводив третину свого дня, вивчаючи і відкриваючи для себе щоь нове.Навчався в Тюдівскому ліцеї. Улюбленими предметами були математика та інформатика.<p>
 			</article>
 			<a href = "#Content">До змісту</a>
 			<article>
 		<h2 id = "Out of school">Поза школою</h2>
-			<p>Ходив в музичну школу по класу аккордеон. Після уроків відвідував футбольну секцію</p>
+			<p>Ходив в музичну школу по класу аккордеон. Після уроків відвідував футбольну секцію/</p>
 			</article>
 			<a href = "#Content">До змісту</a>
 			<article>
 		<h2 id = "Univercity">Університет</h2>
-			<p>Після закінчення школи серйозно замислився про те, ким я хочу працювати та про вибір навчального закладу. Вирішив поступити в прикарпатський національний університет імені Василя Стефаника на спеціальність 122 "Комп'ютерні науки"</p>
+			<p>Після закінчення школи серйозно замислився про те, ким я хочу працювати та про вибір навчального закладу. Вирішив поступити в прикарпатський національний університет імені Василя Стефаника на спеціальність 122 "Комп'ютерні науки".</p>
 			</article>
 			<a href = "#Content">До змісту</a>
 			<hr>			
