--- a/pr3/index.html
+++ b/pr3/index.html
@@ -3,47 +3,41 @@
 	<head>
 		<title>Практична</title>
 		<meta charset="utf-8">
-	</head>	
-	<body>
-		<h1>Персональна сторінка Винничука Максима Петровича</h1>
-		<p>Я студент 1 курсу Прикарпатського національного університету імені Василя Стефаника.Навчаюся на факультеті математики та інформатики, спеціальність "Комп'ютерні науки". Цікавлюсь пррограмуванням та комп'ютерними іграми.</p>
-	<p>
-		<p class='biography'><a href="biography.html">Автобіографія</a>
-				<style type="text/css">
+		<style>
 			.biography :link {
 				 color: red;
 			}
 			.biography :visited {
 				color: green;
 			}
-			</style>
-		<p class='novadays'><a href="novadays.html">Сьогодення</a>
-			<style type="text/css">
-				.novadays :link {
+			.novadays :link {
 				 color: darkred;
 				}
-				.novadays :visited {
+			.novadays :visited {
 				color: orange;
 				}
-			</style>	
+			.friends :link {
+				color: purple;
+				}
+			.friends :visited {
+				color: blue;
+				}
+			.gallery :link {
+				color: fuchsia;
+				}
+			.gallery :visited {
+				color: black;
+				}	
+		</style>	
+	</head>	
+	<body>
+		<h1>Персональна сторінка Винничука Максима Петровича</h1>
+		<p>Я студент 1 курсу Прикарпатського національного університету імені Василя Стефаника.Навчаюся на факультеті математики та інформатики, спеціальність "Комп'ютерні науки". Цікавлюсь пррограмуванням та комп'ютерними іграми.</p>
+	<p>
+		<p class='biography'><a href="biography.html">Автобіографія</a>
+		<p class='novadays'><a href="novadays.html">Сьогодення</a>
 		<p class='friends'><a href="friends.html">Друзі</a>
-			<style type="text/css">
-				.friends :link {
-					color: purple;
-				}
-				.friends :visited {
-					color: blue;
-				}
-			</style>
 		<p class='gallery'><a href="gallery.html">Галерея</a>
-			<style type="text/css">
-				.gallery :link {
-					color: fuchsia;
-				}
-				.gallery :visited {
-					color: black;
-				}
-			</style>
 	</p>
 	</body>
 </html>
