--- a/pr3/biography.html
+++ b/pr3/biography.html
@@ -3,25 +3,22 @@
 	<head>
 		<title>Біографія</title>
 		<meta charset="utf-8">
-	</head>	
-	<body>
-		<h1>Автобіографія Винничука Максима Петровича</h1>
-		<p><a href = "index.html">Назад на головну</a></p>
-		<h3 id = "Content">Зміст:</h3>
 		<style>
 		.clas:link {
 			color: orange;
 			text-decoration: none;
 			background-color: blue;
-			border: 2px solid red;
+			border: 2px solid black;
 			display: block;
 			width: 140px;
 			text-align: center;
-		}		
+		}
 		.clas:visited {
 			color: orange;
-			border: 2px;
-		}	
+			text-decoration: none;
+			background-color: blue;
+			border: 2px solid black;
+		}		
 		.clas:hover {
 			color: green;
 			background-color: magenta;
@@ -30,28 +27,34 @@
 		.clas:active {
 			color: blue;
 			background-color: orange;
-		}
+			border: 2px solid black;
+		}	
 		.a {
 			background-color: black;
 			color: white;
 		}
 		.b {
 			background-color: cyan;
-			color: green;
+			color: crimson;
 		}
 		.c {
 			background-color: purple;
-			color: black;
+			color: yellow;
 		}
 		.d {
 			background-color: red;
-			color:silver;
+			color: blue;
 		}
 		.e {
 			background-color: yellow;
 			color: blue;
 		}
 		</style>
+	</head>	
+	<body>
+		<h1>Автобіографія Винничука Максима Петровича</h1>
+		<p><a href = "index.html">Назад на головну</a></p>
+		<h3 id = "Content">Зміст:</h3>
 		<p><a class='clas'href = "#Basic information">Базова інформація</a></p>
 		<p><a class='clas' href = "#Childhood">Дитинство</a></p>
 		<p><a class='clas' href = "#School years">Шкільні роки</a></p>
